force-app/main/default/objects/DailyHittingStats__c/DailyHittingStats__c.object-meta.xml
<CustomObject>
    <label>打者成績(デイリー)</label>
    <nameField>
        <displayFormat>DB-{0000000}</displayFormat>
        <label>打者成績(デイリー)No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>