force-app/main/default/objects/DailyHittingStats__c/fields/AB__c.field-meta.xml
<CustomField>
    <fullName>AB__c</fullName>
    <label>At Bats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>