force-app/main/default/objects/DailyHittingStats__c/fields/AVG__c.field-meta.xml
<CustomField>
    <fullName>AVG__c</fullName>
    <label>AVG</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>