force-app/main/default/objects/DailyHittingStats__c/fields/CS__c.field-meta.xml
<CustomField>
    <fullName>CS__c</fullName>
    <description>Caught Stealing</description>
    <label>CS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>