force-app/main/default/objects/DailyHittingStats__c/fields/date__c.field-meta.xml
<CustomField>
    <fullName>date__c</fullName>
    <label>日付</label>
    <required>true</required>
    <type>Date</type>
</CustomField>