force-app/main/default/objects/DailyHittingStats__c/fields/Doubles__c.field-meta.xml
<CustomField>
    <fullName>Doubles__c</fullName>
    <label>Doubles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>