force-app/main/default/objects/DailyHittingStats__c/fields/H__c.field-meta.xml
<CustomField>
    <fullName>H__c</fullName>
    <label>Hits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>