force-app/main/default/objects/DailyHittingStats__c/fields/HBP__c.field-meta.xml
<CustomField>
    <fullName>HBP__c</fullName>
    <label>HBP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>