force-app/main/default/objects/DailyHittingStats__c/fields/HR__c.field-meta.xml
<CustomField>
    <fullName>HR__c</fullName>
    <label>HR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>