force-app/main/default/objects/DailyHittingStats__c/fields/OBP__c.field-meta.xml
<CustomField>
    <fullName>OBP__c</fullName>
    <label>OBP</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>