force-app/main/default/objects/DailyHittingStats__c/fields/OPS__c.field-meta.xml
<CustomField>
    <fullName>OPS__c</fullName>
    <label>OPS</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>