force-app/main/default/objects/DailyHittingStats__c/fields/RBI__c.field-meta.xml
<CustomField>
    <fullName>RBI__c</fullName>
    <label>RBI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>