force-app/main/default/objects/DailyHittingStats__c/fields/RESULT__c.field-meta.xml
<CustomField>
    <fullName>RESULT__c</fullName>
    <label>試合結果</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>