force-app/main/default/objects/DailyHittingStats__c/fields/SB__c.field-meta.xml
<CustomField>
    <fullName>SB__c</fullName>
    <label>SB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>