force-app/main/default/objects/DailyHittingStats__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <formula>TEXT(YEAR( date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>シーズン</label>
    <type>Text</type>
</CustomField>