force-app/main/default/objects/DailyHittingStats__c/fields/SLG__c.field-meta.xml
<CustomField>
    <fullName>SLG__c</fullName>
    <label>SLG</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>