force-app/main/default/objects/DailyHittingStats__c/fields/TotalHR__c.field-meta.xml
<CustomField>
    <fullName>TotalHR__c</fullName>
    <label>累積HR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>