force-app/main/default/objects/DailyHittingStats__c/fields/Triples__c.field-meta.xml
<CustomField>
    <fullName>Triples__c</fullName>
    <label>Triples</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>