force-app/main/default/objects/DailyHittingStats__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>player__c</columns>
    <columns>date__c</columns>
    <columns>HR__c</columns>
    <columns>TotalHR__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>